# template

./: .pre-commit-config.yaml  .travis.yml  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg  setup.py
docs/: conf.py  index.rst
docs/source/: mypackage.rst  mypackage.subpackage.rst
mypackage/: __init__.py  module1.py
mypackage/subpackage/: module2.py
tests/: test_module1.py
tests/test_subpackage/: test_module2.py
