[metadata]
name = mypackage
license = MIT
platform = any
description = My template package
long_description = file:README.md
long_description_content_type = text/markdown
install_requires =
    numpy

[options]
packages = find:

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[flake8]
max-line-length = 79
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/
